--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,7 @@
 /* Variables */
 
 $active-link-color: #2196f3;
+$button-hover-color: #188CE8;
 $default-text: #000000;
 $contrast-text: #ffffff;
 $footer-text: rgba(255, 255, 255, 0.6);
