--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,31 +1,152 @@
 
-/* #region Header styles */
+// #region Header styles
 
 .header {
+  padding: 0;
+  margin: 0;
+  
   border-bottom: 1px solid #ececec;
 }
 
+.header__container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  min-height: 60px;
+
+  @media (min-width: 1200px) {
+    min-height: 80px;
+  }
+}
+
+.header-menu {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  
+  @media (max-width:767.5px) { display: none; }
+}
+
+.header-menu.is-open {
+  @media (max-width: 767.5px) {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding-left: 40px;
+
+    background-color: #ffffff;
+    z-index: 1;
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+                0px 1px 1px rgba(0, 0, 0, 0.14),
+                0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+}
+
+.header-button {
+  display: none;
+
+  @media (max-width: 767.5px) {
+    display: flex;
+    position: absolute;
+    top: 10px;
+    left: 425px;
+
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    // margin: 10px 10px 10px auto;
+    font-size: 0;
+    
+    z-index: 2;
+
+    &:hover,
+    &:focus {
+      color: $active-link-color;
+    }
+  }
+}
+
+.header-button__close {
+  display: none;
+}
+
+.header-button.is-open .header-button__open {
+  display: none;
+}
+
+.header-button.is-open .header-button__close {
+  display: block;
+}
+
+.header-button__close {
+  display: none;
+}
+
+// #endregion
+
+// #region Header Navigation menu styles
+
 .header-nav {
-  margin-left: 93px;
+  // justify-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  margin-top: 48px;
+  margin-bottom: auto;
+  
+  @media (min-width:768px) {
+    flex-direction: row;
+    margin-top: 0;
+    margin-left: 88px;
+  }
+  
+  @media (min-width:1200px) {
+    margin-left: 93px;
+  }
 }
 
 .header-nav__list {
   display: flex;
+  flex-direction: column;
+  
+  @media (min-width:768px) {
+    flex-direction: row;
+  }
 }
 
 .header-nav__item:not(:last-child) {
-  margin-right: 50px;
+  margin-left: 0;
+  margin-bottom: 35px;
+
+  @media (min-width: 768px) {
+    margin-right: 50px;
+    margin-bottom: 0px;
+  }
 }
 
 .header-nav__link {
   display: inline-block;
-  position: relative;
-  padding: 32px 0px;
-
+  
   font-weight: 500;
-  line-height: 1.14;
+  font-size: 40px;
+  line-height: 1.175;
   letter-spacing: 0.02em;
-  text-decoration: none;
+
+  @media (min-width:768px){
+    position: relative;
+    padding: 32px 0px;
+
+    font-size: 14px; 
+    line-height: 1.14;
+  }
 }
 
 .header-nav__link {
@@ -41,48 +162,130 @@
 }
 
 .header-nav__link--selected::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: 0;
-
-  background: $active-link-color;
-  border-radius: 2px;
+  @media (min-width:768px){
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: 0;
+  
+    background: $active-link-color;
+    border-radius: 2px;}
 }
+
+// #endregion
+
+// #region Header Address block styles
 
 .header-address {
   display: flex;
-  margin-left: auto;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+
+  @media (min-width:768px) {
+    margin-left: auto;
+    flex-direction: column;
+  }
+  
+  @media (min-width:1200px) {
+    flex-direction: row;
+  }
 }
 
 .header-address__link:not(:last-child) {
-  margin-right: 50px;
+  @media (min-width:768px) {
+    margin: 0 0 10px 0;
+  }
+  
+  @media (min-width:1200px) {
+    margin: 0 50px 0 0;
+  }
 }
 
 .header-address__link {
   display: inline-flex;
-  align-items: center;
-  padding: 20px 0;
+  align-items: flex-start;
 
-  color: $light-grey-text;
   font-weight: 500;
-  line-height: 1.71;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   text-decoration: none;
+  color: $light-grey-text;
+  
+  @media (min-width:768px) {
+    padding: 0;
 
-  transition: color 250ms $animation-time-function;
+    font-size: 12px;
 
-  &:hover,
-  &:focus {
+    transition: color 250ms $animation-time-function;
+
+    &:hover,
+    &:focus {
+      color: $active-link-color;
+    }
+  }
+  
+  @media (min-width:1200px) {
+    padding: 20px 0;
+
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
+.header-address__link--big-blue {
+  @media (max-width: 767.5px){
+    font-size: 34px;
+    line-height: 1.18;
     color: $active-link-color;
+    margin-bottom: 32px;
   }
 }
 
 .header-address__icon {
+  display: none;
   margin-right: 10px;
   /* fill: currentColor; */
+
+  @media (min-width: 768px) {
+    display: inline-block;
+  }
 }
 
-/* #endregion */
+// #endregion
+
+// #region Header Social links styles
+
+.header-social {
+  display: flex;
+  justify-content: center;
+  margin-top: 64px;
+  margin-bottom: 48px;
+
+  color: $light-grey-text;
+  
+  @media (min-width:768px) {
+    display: none;
+  }
+}
+
+.header-social__item:not(:last-child) {
+  padding-right: 10px;
+}
+
+.header-social__item:not(:first-child) { //
+  padding-left: 10px;
+  list-style-type: '|';
+
+}
+
+.header-social__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  color: $active-link-color;
+}
+
+// #endregion
