--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -8,6 +8,10 @@ html {
   box-sizing: inherit;
 }
 
+a {
+  text-decoration: none;
+}
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -18,6 +22,25 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+
+  background-color: #ffffff;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  
+  @media (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media (min-width: 768px) {
+    width: 768px;
+  }
+  
+  @media (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 ul {
@@ -31,10 +54,14 @@ ul {
 }
 
 .section {
-  margin: 0;
-  padding: 94px 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 60px 0;
 
-  text-align: center;
+  @media (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 
 .section__header {
@@ -42,9 +69,13 @@ ul {
 
   color: $dark-grey-text;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
 
+  @media (min-width: 768px) {
+    font-size: 36px;
+    line-height: 1.17;
+  }
   text-align: center;
 }
 
@@ -52,24 +83,9 @@ ul {
   background-color: $light-grey-background;
 }
 
-.container {
-  width: 1200px;
-  padding: 0 15px;
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
-
-  &--flex {
-    display: flex;
-  }
-
-  &--center {
-    align-items: center;
-  }
-}
-
 .card-list {
   display: flex;
+  flex-flow: row wrap;
 }
 
 .button {
@@ -99,6 +115,7 @@ ul {
 
   &:hover,
   &:focus {
+    background-color: $button-hover-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
       0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
