--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -218,6 +218,13 @@
   border-radius: 0px 0px 4px 4px;
 }
 
+.team-member__photo {
+  width: 450px;
+  height: 294px;
+  @media (min-width: 768px) { width: 354px; }
+  @media (min-width: 1200px) { width: 270px; }
+}
+
 .team-member__name {
   margin: 30px 0 10px;
 
