--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -65,18 +65,19 @@ ul {
 }
 
 .section__header {
-  margin: 0 0 50px;
+  margin: 0 0 30px;
 
   color: $dark-grey-text;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.18;
+  text-align: center;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     font-size: 36px;
     line-height: 1.17;
+    margin-bottom: 50px;
   }
-  text-align: center;
 }
 
 .section--bgc-lightgrey {
