--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,7 @@ ul {
 }
 
 .header__container {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1463,18 +1464,18 @@ body.modal-open {
   margin: -15px;
   padding: 0;
   list-style: none;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 
 @media screen and (min-width: 768px) {
   .portfolio {
-    margin-top: 30px;
+    margin-top: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .portfolio {
-    margin-top: 50px;
+    margin-top: 35px;
   }
 }
 
