--- a/css/main.css
+++ b/css/main.css
@@ -436,6 +436,7 @@ ul {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  min-width: 340px;
 }
 
 @media screen and (min-width: 768px) {
