--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -187,6 +187,7 @@ body.menu-open {
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-start;
+  min-width: 340px;
 
   @media screen and (min-width:768px) {
     margin-left: auto;
